# EvaEngine

./: .gitignore  build.sh  test.sh
src/: CMakeLists.txt  Doxyfile  Doxyfile.bak
src/apps/: CMakeLists.txt
src/apps/osgroute/: CMakeLists.txt  FixedQuadtree.h  IntelligentAgent.cpp  IntelligentAgent.h  IntelligentAgentManager.cpp  IntelligentAgentManager.h  OsgHelper.cpp  OsgHelper.h  PickHandler.cpp  PickHandler.h  RoadCommon.cpp  RoadCommon.h  main.cpp
src/eva/: CMakeLists.txt  Typedefs.h
src/eva/geometry/: CMakeLists.txt  evaLine.h  evaLine2D.h  evaLine3D.h  evaPoint2D.h  evaPoint3D.h  evaRectangle2D.h
src/eva/geometry/basic/2d/: evaLine2D.h  evaPoint2D.h  evaRectangle.h  evaSquare.h  evaTetragon.h
src/eva/geometry/basic/3d/: evaCuboid.h  evaLine3D.h  evaPoint3D.h
src/eva/geometry/generic/: evaAbstractPoint.h  evaFixedPolygon.h  evaFixedPolyhedron.h
src/eva/geometry/intersection/: Intersection2D.h  Intersection3D.h
src/eva/math/: evaAbstractVector.h  evaBezierCurve.h  evaGenericVector.h  evaMathCommon.h  evaMathDefines.h  evaMatrix.h  evaPoint.h  evaVector.h  evaVector2D.h  evaVector3D.h
src/eva/osg/: CMakeLists.txt
src/eva/osg/route/: RouteGraphVisualizer.cpp  RouteGraphVisualizer.h
src/eva/route/: evaPath.h  evaRouteGraph.cpp  evaRouteGraph.h  evaRouteGraphEdge.cpp  evaRouteGraphEdge.h  evaRouteNode.cpp  evaRouteNode.h  evaTemporaryRouteNode.cpp  evaTemporaryRouteNode.h
src/eva/structures/: CMakeLists.txt  RStarBoundingBox.h  RStarTree.h  RStarVisitor.h  evaBlockArray.h  evaFixedArray.h  evaSimpleDynamicArray.h
src/tests/: CMakeLists.txt
src/tests/eva/: CMakeLists.txt  TestTypedefs.cpp  TestTypedefs.h
src/tests/eva/geometry/: CMakeLists.txt  TestEvaPoint2D.cpp  TestEvaPoint2D.h
src/tests/eva/math/: CMakeLists.txt  TestEvaVector2D.cpp  TestEvaVector2D.h
src/tests/eva/route/: CMakeLists.txt  TestEvaRouteElements.cpp  TestEvaRouteElements.h  TestEvaRouteGraph.cpp  TestEvaRouteGraph.h
src/tests/eva/structures/: CMakeLists.txt  TestEvaBlockArray.cpp  TestEvaBlockArray.h  TestEvaSimpleDynamicArray.cpp  TestEvaSimpleDynamicArray.h
