CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../cmake ${CMAKE_MODULE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

MESSAGE(STATUS "Build Directory: " ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Build Type: " ${CMAKE_BUILD_TYPE})

ADD_SUBDIRECTORY(eva)
ADD_SUBDIRECTORY(tests)