CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../cmake ${CMAKE_MODULE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

MESSAGE(STATUS "Build Directory: " ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Build Type: " ${CMAKE_BUILD_TYPE})

# Build core components
ADD_SUBDIRECTORY(eva)
ADD_SUBDIRECTORY(eva/osg)

# Build applications
IF($ENV{EVA_BUILD_APPS})
	ADD_SUBDIRECTORY(apps)
ENDIF()

# Build unit/performance tests
IF($ENV{EVA_BUILD_TESTS})
	ADD_SUBDIRECTORY(tests)
ENDIF()