CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(INCLUDE_DIRECTORY ${CMAKE_BINARY_DIR}/include)

SET (TARGET EvaEngineLib)

SET(EVAENGINELIB_SOURCE)
SET(EVAENGINELIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Typedefs.h)

ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(structures)

ADD_LIBRARY(${TARGET} SHARED ${EVAENGINELIB_SOURCE} ${EVAENGINELIB_HEADERS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINKER_LANGUAGE CXX VERSION 1.0.0 SOVERSION 1)
INSTALL(FILES ${EVAENGINELIB_HEADERS} DESTINATION ${INCLUDE_DIRECTORY})
INSTALL(TARGETS ${TARGET} DESTINATION bin)

