CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(INCLUDE_DIRECTORY ${CMAKE_BINARY_DIR}/include)

SET(TARGET EvaEngineLib)

SET(MATH_HEADERS	math/evaVector3D.h
	)

SET(STRUCTURES_HEADERS	structures/evaSimpleDynamicArray.h
					 	structures/evaBlockArray.h
	)
	
SET(GEOMETRY_HEADERS	geometry/evaPoint2D.h
						geometry/evaPoint3D.h
	)

SET(ROUTE_SOURCE	route/evaRouteGraphEdge.cpp
					route/evaRouteNode.cpp
					route/evaRouteGraph.cpp
	)

SET(ROUTE_HEADERS	route/evaRouteGraphEdge.h
					route/evaRouteNode.h
					route/evaRouteGraph.h
	)

SET(EVAENGINELIB_SOURCE		${ROUTE_SOURCE}
	)

SET(EVAENGINELIB_HEADERS	${CMAKE_CURRENT_SOURCE_DIR}/Typedefs.h
							${STRUCTURES_HEADERS}
							${GEOMETRY_HEADERS}
							${ROUTE_HEADERS}
	)

ADD_LIBRARY(${TARGET} SHARED ${EVAENGINELIB_SOURCE} ${EVAENGINELIB_HEADERS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINKER_LANGUAGE CXX VERSION 1.0.0 SOVERSION 1)
INSTALL(FILES ${EVAENGINELIB_HEADERS} DESTINATION ${INCLUDE_DIRECTORY})
INSTALL(TARGETS ${TARGET} DESTINATION bin)

