CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(CppUnit)

IF(CPPUNIT_FOUND)
	MESSAGE(STATUS "CppUnit found. Building Unit Tests")
	
	SET(TEST_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/TestMain.cpp)

	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
	INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})

	ENABLE_TESTING()	
	ADD_SUBDIRECTORY(eva)
ELSE()
	MESSAGE(STATUS "WARNING: CppUnit not found. Skipping Unit Tests build.")
ENDIF()