cmake_minimum_required(VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(INCLUDE_DIRECTORY ${CMAKE_BINARY_DIR}/include)

SET(CMAKE_CXX_FLAGS "-g -Wall")

FIND_PACKAGE(OpenSceneGraph 2.8.2 COMPONENTS osg osgViewer osgGA osgDB)
IF(OPENSCENEGRAPH_FOUND)
	INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
	
	SET (TARGET evaOsgRouteGraph)
	ADD_EXECUTABLE(${TARGET} main.cpp)
	TARGET_LINK_LIBRARIES(${TARGET} EvaEngineLib EvaEngineOsgLib ${OPENSCENEGRAPH_LIBRARIES})
	
	INSTALL (TARGETS ${TARGET} DESTINATION bin)
ENDIF()