CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(OpenSceneGraph 2.8.2 COMPONENTS osg osgViewer osgGA osgDB)

IF(OPENSCENEGRAPH_FOUND)
	MESSAGE(STATUS "OpenSceneGraph found. Building evaOpenSceneGraph")
	
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
	SET(INCLUDE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
	
	SET(TARGET EvaEngineOsgLib)
		
	SET(ROUTE_SOURCE	route/RouteGraphVisualizer.cpp
		)
	
	SET(ROUTE_HEADERS	route/RouteGraphVisualizer.h
		)
	
	SET(EVAENGINEOSGLIB_SOURCE		${ROUTE_SOURCE}
		)
	
	SET(EVAENGINEOSGLIB_HEADERS		${ROUTE_HEADERS}
		)
	
	ADD_LIBRARY(${TARGET} SHARED ${EVAENGINEOSGLIB_SOURCE} ${EVAENGINEOSGLIB_HEADERS})
	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINKER_LANGUAGE CXX VERSION 1.0.0 SOVERSION 1)
	INSTALL(FILES ${EVAENGINEOSGLIB_HEADERS} DESTINATION ${INCLUDE_DIRECTORY})
	INSTALL(TARGETS ${TARGET} DESTINATION bin)
ELSE()
	MESSAGE(STATUS "WARNING: OpenSceneGraph not found. Skipping evaOpenSceneGraph build.")
ENDIF()