CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_TEST(EvaTypedefTest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/EvaTypedefTest)
ADD_EXECUTABLE(EvaTypedefTest ${TEST_MAIN} TestTypedefs.cpp)
TARGET_LINK_LIBRARIES(EvaTypedefTest EvaEngineLib ${CPPUNIT_LIBRARIES})

ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(structures)
ADD_SUBDIRECTORY(route)